# devs_cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
build_buster/: README.md  analysis_options.yaml  pubspec.yaml
build_buster/assets/: devs_cleaner
build_buster/docs/: fix_linux_file_picker.md  rust_linux_install_readme.md
build_buster/lib/: build_buster.dart  helper.dart  main.dart
build_buster/lib/model/data/: dev_project.dart  dev_project.freezed.dart  dev_project.g.dart  docker_system_df.dart  docker_system_df.freezed.dart  docker_system_df.g.dart  (+12 more)
build_buster/lib/view/: theme.dart
build_buster/lib/view_model/: backend_status.dart  backend_status.g.dart  home_page_view_model.dart  home_page_view_model.g.dart
build_buster/linux/: CMakeLists.txt
build_buster/linux/runner/: my_application.cc
build_buster/macos/Flutter/: GeneratedPluginRegistrant.swift
build_buster/macos/Runner/: RunnerDebug.entitlements
build_buster/macos/Runner.xcodeproj/: project.pbxproj
build_buster/test/: widget_test.dart  widget_test.mocks.dart
build_buster/windows/: CMakeLists.txt
build_buster/windows/runner/: Runner.rc  main.cpp
devs_cleaner/: Cargo.toml
devs_cleaner/src/: lib.rs  main.rs
devs_cleaner/src/cleanup/: mod.rs
devs_cleaner/src/cli/: args.rs  mod.rs  models.rs
devs_cleaner/src/listing/: mod.rs
devs_cleaner/src/models/: mod.rs
devs_cleaner/src/server/: mod.rs
scripts/: build.sh  run-linux.sh  run-macos.sh  run-windows.bat  run.sh
src/: lib.rs  main.rs
src/listing/: mod.rs
src/models/: mod.rs
(+21 files in other folders)
