[package]
name = "devs_cleaner"
version = "1.0.1"
edition = "2024"
default-run = "devs_cleaner"

[[bin]]
name = "devs_cleaner_cli"
path = "src/bin/devs_cleaner_cli.rs"


[dependencies]
axum = "0.8.8"
clap = { version = "^4.6.0", features = ["derive"] }
proc-macro2 = "1.0.106"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"
